<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="textButtonSearch">Поиск</string>
    <string name="textButtonMedia">Медиатека</string>
    <string name="textButtonSetting">Настройки</string>
    <string name="setScreen_darkTheme">Тёмная тема</string>
    <string name="setScreen_shareApp">Поделиться приложением</string>
    <string name="textBottomSheet_shareApp">Поделиться приложением</string>
    <string name="setScreen_writeSupport">Написать в поддержку</string>
    <string name="setScreen_userAgreement">Пользовательсвое соглашение</string>
    <string name="link_androidDeveloper">https://practicum.yandex.ru/android-developer/</string>
    <string name="sendMail">dmitrypopof@mail.ru</string>
    <string name="subjectMail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="textMail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="textBottomSheet_support">Отправить письмо</string>
    <string name="linkPracticumOffer">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="textBottomSheet_agreement">Выберите браузер</string>
    <string name="textSearch">Поиск</string>
    <string name="point_separator">•</string>
    <string name="problem_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="no_result">Ничего не нашлось</string>
    <string name="search_hint">Вводите название трека или артиста</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration_song">Продолжительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_track_time">00:00</string>

    <!-- Экран Медиатека -->
    <string name="media_title">Медиатека</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="tab_favorite_tracks">Избранные треки</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
</resources>