<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="start"
        android:textColor="@color/black"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/textButtonSetting" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            android:text="@string/setScreen_darkTheme"
            android:textSize="16sp" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_shareApp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_write_support"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_writeSupport"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_arrow_forward"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_userAgreement"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>