<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    style="@style/ActivityScreenMain.Background.Setting"
    tools:context="com.example.playlistmaker.feature.settings.presentation.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/textButtonSetting"
        android:fontFamily="@font/ys_display_medium"
        style="@style/ActivityScreenSetting"
        android:textSize="22sp" />

    <!-- Код ниже без изменений -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_darkTheme"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        style="@style/DarkLightSwitch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_shareApp"
        style="@style/ActivityScreenSetting" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/writeSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_write_support"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_writeSupport"
        android:textSize="16sp"
        style="@style/ActivityScreenSetting" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_button_arrow_forward"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/setScreen_userAgreement"
        android:textSize="16sp"
        style="@style/ActivityScreenSetting" />

</LinearLayout>