<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioPlayer"
    style="@style/AudioPlayer_generalSet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Левая направляющая с отступом 24dp -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <!-- Правая направляющая с отступом 24dp -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!-- Левая направляющая для кнопок с отступом 24dp -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_buttons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <!-- Правая направляющая для кнопок с отступом 24dp -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_buttons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!-- Кнопка назад -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/DarkLightIcon"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Обложка альбома -->
    <androidx.cardview.widget.CardView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            style="@style/TrackImageStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_no_dowload_album_312x312" />
    </androidx.cardview.widget.CardView>

    <!-- Имя трека -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/track_name"
        style="@style/Player_TrackNameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="Smells Like Teen Spirit" />

    <!-- Имя артиста -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/artist_name"
        style="@style/Player_ArtistNameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="Nirvana" />

    <!-- Кнопка "Добавить в плейлист" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addPlaylist"
        style="@style/ButtonAudioPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_playlist_button"
        android:padding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/left_buttons_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintTop_toTopOf="@id/playButton" />

    <!-- Кнопка "Play" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/playButton"
        style="@style/DarkLightIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:icon="@drawable/ic_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <!-- Кнопка "Избранное" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/favouriteButton"
        style="@style/ButtonAudioPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_favourites_button"
        app:iconPadding="0dp"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/right_buttons_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintTop_toTopOf="@id/playButton"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/track_time"
        style="@style/Player_ArtistNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        tools:text="0:30" />

    <!-- Информация о треке -->
    <GridLayout
        android:id="@+id/track_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="5"
        app:layout_constraintEnd_toStartOf="@+id/right_buttons_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_buttons_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_time"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Продолжительность -->
        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText"
            android:text="@string/duration_song" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText.End"
            tools:text="5:35" />

        <!-- Альбом -->
        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText"
            android:text="@string/album" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText.End"
            tools:text="Nevermind" />

        <!-- Год -->
        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText"
            android:text="@string/year" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText.End"
            tools:text="1991" />

        <!-- Жанр -->
        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText"
            android:text="@string/genre" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText.End"
            tools:text="Grunge" />

        <!-- Страна -->
        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText"
            android:text="@string/country" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TrackInfoText.End"
            tools:text="США" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>